# prune-mem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  prune-mem-skill-guide.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  development-retrospective.md  landscape.md  launch.md
examples/: alias-payload.json  consolidate-payload.json  constraint-transcript.json  export-bundle.json  extract-payload.json  overwrite-payload-base.json  overwrite-payload-conflict.json  prune-payload.json  reject-inferred-payload.json  transcript.json
examples/eval-basic/: policy.toml
examples/eval-prune-2/: slots.toml
examples/eval-suite-3/scenario-2/: slots.toml
examples/eval-suite-extended/scenario-6/: policy.toml
examples/scenarios/: alias-normalization.json  basic-flow.json  constraint-extraction.json  implicit-consolidation.json  prune-stale.json  reject-inferred.json  slot-overwrite.json
scripts/: check_install.ps1  install_local.py  install_skill.py  run_local.py  test_local_install.ps1  uninstall_local.py  verify_installed_skill.ps1  verify_local_alpha.ps1
skill/prune-mem-skill/: SKILL.md  config.local.toml.example
src/prune_mem/: __init__.py  cli.py  config.py  dedupe.py  engine.py  extractors.py  harness.py  migrations.py  models.py  policies.py  reporting.py  runtime_config.py  schema.py  smoke.py  storage.py  transfer.py
tests/: test_cli.py  test_engine.py  test_extractors.py  test_harness.py  test_reporting.py  test_run_local.py  test_schema_and_dedupe.py  test_smoke.py  test_transfer.py
(+6 files in other folders)
